--- a/WebPortfolio/style.css
+++ b/WebPortfolio/style.css
@@ -7,6 +7,38 @@ body{
     color: midnightBlue;
     font-size: 60px;
 }
-#category{
-    color: dimGray
+#link-to-blog{
+    text-align: center;
+    font-size: 20px;
+}
+#logo{
+    width: 50px;
+    height: 50px; 
+}
+#education{
+    color: dimGray;
+}
+#skills{
+    color: dimGray;
+}
+#education-pic{
+    width: 200px;
+    height: 200px;
+}
+#skills-pic{
+    width: 200px;
+    height: 200px;
+}
+#contact{
+    font-size: 15px;
+    font-weight: bold;
+}
+.button{
+    text-align: center;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
